--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Sample app</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati eveniet, laboriosam doloribus odio incidunt voluptatem? Id totam quibusdam ratione odit! Dignissimos consequuntur excepturi beatae culpa, exercitationem officia vero reiciendis, assumenda tempora repellendus rem modi minima molestias amet cupiditate aliquam perferendis laborum! Tenetur velit aspernatur inventore deleniti quasi itaque odit placeat impedit deserunt, veniam, fugit, enim perferendis neque eveniet expedita voluptatem? Ad placeat animi quo fugit veniam. Fugiat dicta voluptatibus iure quis quisquam numquam atque autem praesentium quidem, aliquid, distinctio possimus nobis itaque assumenda consequuntur dolorum at quia ducimus aspernatur recusandae quas. Perspiciatis esse dolorem quasi, laborum aperiam repudiandae impedit consequatur. ipsum dolor sit amet consectetur adipisicing elit. Nulla cum unde eius blanditiis quod non numquam amet! Fugiat modi alias nulla! Debitis eligendi alias accusamus illum perferendis assumenda voluptas ea.</p>
+    <div class="container">
+        <div class="div"></div>
+        <div class="div2"></div>
+        <div class="div"></div>
+        <div class="div"></div>
+    </div>
 </body>
 </html>
