--- a/assignment1.html
+++ b/assignment1.html
@@ -11,7 +11,7 @@
     <div class="redDiv"></div>
     <div class="greenDiv"></div>
     <div class="blueDiv"></div>
-    <div class="pink"></div>
+    <div class="pinkDiv"></div>
     <div class="orangeDiv"></div>
 </body>
 </html>
